--- a/work/palette/index.html
+++ b/work/palette/index.html
@@ -56,7 +56,7 @@
       <img src="/work/palette/assets/palette visual audit.png" alt="Palette" />
     </div>
     <p>As our codebase moved more and more into React, our usage of components continued to be team specific, and lacked
-      a cohesive strategy. These divergent approachs resulted in a large amount of overhead in developing new
+      a cohesive strategy. These divergent approaches resulted in a large amount of overhead in developing new
       experiences and iterating on current products.</p>
     <div class="img-wrapper">
       <img src="/work/palette/assets/palette storybooks audit.png" alt="Palette" />
@@ -83,8 +83,8 @@
   <section>
     <h2>System heirarchy</h2>
     <p>The most fundamental problem for our task force to address was the question of what should be included in a
-      cohesive design system. Creating a hierarchical vocabularly allowed us to assess all potential additions to the
-      Palette code base based on their specificity of application and their scalability accross our product experiences. All
+      cohesive design system. Creating a hierarchical vocabulary allowed us to assess all potential additions to the
+      Palette code base based on their specificity of application and their scalability across our product experiences. All
       additions to this system should be useful across a many of our products, working in a wide range contexts and for
       a variety of users.</p>
     <div class="img-wrapper">
@@ -95,11 +95,11 @@
 
   <section>
     <h2>Components: typography</h2>
-    <p>After an inital round of standardization of our type sizes and consolidation of their implementation we began developing an additional layer of typographic variables. The semantic naming of these variable created more clarity in how they should be applied. Additionally, these variables incorporated responsive logic allowing us to more easily scale type relationships across our breakpoints.</p>
+    <p>After an initial round of standardization of our type sizes and consolidation of their implementation we began developing an additional layer of typographic variables. The semantic naming of these variable created more clarity in how they should be applied. Additionally, these variables incorporated responsive logic allowing us to more easily scale type relationships across our breakpoints.</p>
     <div class="img-wrapper">
       <img src="/work/palette/assets/palette typography docs.png" alt="Palette" />
     </div>
-    <p>Throughout this process, it was cruicial to continually test these variables accross our key product surfaces to ensure its functionality.</p>
+    <p>Throughout this process, it was crucial to continually test these variables across our key product surfaces to ensure its functionality.</p>
     <div class="img-wrapper">
       <div class="img-wrapper">
         <img src="/work/palette/assets/palette typography tests.png" alt="Palette" />
@@ -108,14 +108,14 @@
   </section>
   <section>
     <h2>Components: quick inputs</h2>
-    <p>Our quick edit input were created to capture information in contexts where experiences must be as lightweight as possible. Used prominitely in our log in and sign up forms, these elements are meant to be as condensed as possible while retaining their clairity and functionality.</p>
+    <p>Our quick edit input were created to capture information in contexts where experiences must be as lightweight as possible. Used prominently in our log in and sign up forms, these elements are meant to be as condensed as possible while retaining their clarity and functionality.</p>
     <div class="img-wrapper">
       <img src="/work/palette/assets/palette quick input.png" alt="Palette" />
     </div>
   </section>
   <section>
     <h2>Components: modals</h2>
-    <p>Modals are used across our platform for quick actions and to surface important contextual information. The new modal compontent in Palette was created with two size variations, and a number of standardized treatment options for CTAs, forms, titles and other commonly used UI.</p>
+    <p>Modals are used across our platform for quick actions and to surface important contextual information. The new modal component in Palette was created with two size variations, and a number of standardized treatment options for CTAs, forms, titles and other commonly used UI.</p>
     <div class="img-wrapper">
       <img src="/work/palette/assets/palette heirarchy.png" alt="Palette" />
     </div>
@@ -130,7 +130,7 @@
 
   <section>
     <h2>Moving forward</h2>
-    <p>As our design system is increasingly adopted across our product areas, we have continued to emphasis the importance of documentation of usage, and guidelines, creating a centralized, structured home for this work to live. This work will continue to evolve and be refined as we increase useage and find the boundries of our current systems.</p>
+    <p>As our design system is increasingly adopted across our product areas, we have continued to emphasis the importance of documentation of usage, and guidelines, creating a centralized, structured home for this work to live. This work will continue to evolve and be refined as we increase usage and find the boundaries of our current systems.</p>
     <div class="img-wrapper">
       <img src="/work/palette/assets/palette banner.png" alt="Palette" />
     </div>
