--- a/work/palette/index.html
+++ b/work/palette/index.html
@@ -39,13 +39,13 @@
     <h2>Background</h2>
     <p>
       Over the past 3 years, the Artsy design team has taken various attempts at developing a cohesive design system to
-      enable quicker and more consistent iteration across our products. Without a consistent approach, these initiatives
+      enable quicker and more consistent iteration across our products. Without a structured approach, these initiatives
       have been limited in scope to specific product areas and have
       failed to gain traction within the organization.
     </p>
     <p> Working without dedicated design systems resources, we knew we must focus on creating a system that could be
       developed in a distributed manner and whose work could be
-      incorporated into existing product teams work as much as possible. </p>
+      incorporated into existing product team roadmaps as much as possible. </p>
   </section>
 
   <section>
@@ -65,16 +65,15 @@
 
   <section>
     <h2>Designing process</h2>
-    <p>With the goal of creating a system that was easily consumable by a variety of teams working both on design and
-      engineering, we focused our attention on first articulating a lightweight and easily replicable process for any
+    <p>With the goal of creating a system that was easily consumable by both design and
+      engineering teams, we focused our attention first on articulating a lightweight and easily replicable process for any
       potential contributors. The result of this was the formation of a small task force, meeting on a biweekly basis,
       and robust documentation for all aspects of the design systems development process. </p>
     <div class="img-wrapper">
       <img src="/work/palette/assets/palette meeting.png" alt="Palette" />
     </div>
     <p>Our documentation was created to ensure a consistent style and framework for all additions to our design system.
-      This was especially important for our team as both the engineering and design team scaled without dedicated
-      resources focused on the health and continued application of these systems.</p>
+      This was especially important as our product team rapidly scaled while maintain a singular approach.</p>
     <div class="img-wrapper">
       <img src="/work/palette/assets/palette component process.png" alt="Palette" />
     </div>
@@ -82,11 +81,9 @@
 
   <section>
     <h2>System heirarchy</h2>
-    <p>The most fundamental problem for our task force to address was the question of what should be included in a
-      cohesive design system. Creating a hierarchical vocabulary allowed us to assess all potential additions to the
+    <p>The most fundamental problem for our task force to address was defining what should and should not be included in the design system. Creating a hierarchical vocabulary allowed us to assess all potential additions to the
       Palette code base based on their specificity of application and their scalability across our product experiences. All
-      additions to this system should be useful across a many of our products, working in a wide range contexts and for
-      a variety of users.</p>
+      additions to this system needed to be applicable to a wide range of products and device types.</p>
     <div class="img-wrapper">
       <img src="/work/palette/assets/palette heirarchy.png" alt="Palette" />
     </div>
@@ -95,11 +92,11 @@
 
   <section>
     <h2>Components: typography</h2>
-    <p>After an initial round of standardization of our type sizes and consolidation of their implementation we began developing an additional layer of typographic variables. The semantic naming of these variable created more clarity in how they should be applied. Additionally, these variables incorporated responsive logic allowing us to more easily scale type relationships across our breakpoints.</p>
+    <p>After an initial round of standardization of our type sizes, we further refined our type system by creating an additional layer of typographic variables. The semantic naming of these variables created more clarity in how they should be applied. Additionally, responsive logic was built into each variable, allowing us to more easily scale type relationships across our breakpoints.</p>
     <div class="img-wrapper">
       <img src="/work/palette/assets/palette typography docs.png" alt="Palette" />
     </div>
-    <p>Throughout this process, it was crucial to continually test these variables across our key product surfaces to ensure its functionality.</p>
+    <p>Throughout this process, it was crucial to continually test these variables across our key product surfaces to ensure their functionality.</p>
     <div class="img-wrapper">
       <div class="img-wrapper">
         <img src="/work/palette/assets/palette typography tests.png" alt="Palette" />
@@ -108,21 +105,21 @@
   </section>
   <section>
     <h2>Components: quick inputs</h2>
-    <p>Our quick edit input were created to capture information in contexts where experiences must be as lightweight as possible. Used prominently in our log in and sign up forms, these elements are meant to be as condensed as possible while retaining their clarity and functionality.</p>
+    <p>Our quick edit inputs were created to capture information as seamlessly as possible, and are prominently used in our log in and sign up flow.</p>
     <div class="img-wrapper">
       <img src="/work/palette/assets/palette quick input.png" alt="Palette" />
     </div>
   </section>
   <section>
     <h2>Components: modals</h2>
-    <p>Modals are used across our platform for quick actions and to surface important contextual information. The new modal component in Palette was created with two size variations, and a number of standardized treatment options for CTAs, forms, titles and other commonly used UI.</p>
+    <p>Modals are used across our platform for quick actions and to surface important contextual information. The new modal component in Palette was created with two size variations, and with a number of standardized treatment options for CTAs, forms, titles and other commonly used UI.</p>
     <div class="img-wrapper">
       <img src="/work/palette/assets/palette heirarchy.png" alt="Palette" />
     </div>
   </section>
   <section>
     <h2>Components: data visualization</h2>
-    <p>An initial bar chart component was initially created when we began surfacing data to users both on the front end of the site and in our partner-facing CMS. Soon after, additional visualization options were added to support a wider variety of data types.</p>
+    <p>The line chart and donut chart components were built on top of our existing bar chart data visualization component to support a wider range of data types. These components are used both on the front end of the site, and in our partner CMS to show analytics and market data.</p>
     <div class="img-wrapper">
       <img src="/work/palette/assets/palette data visualization.png" alt="Palette" />
     </div>
@@ -130,7 +127,7 @@
 
   <section>
     <h2>Moving forward</h2>
-    <p>As our design system is increasingly adopted across our product areas, we have continued to emphasis the importance of documentation of usage, and guidelines, creating a centralized, structured home for this work to live. This work will continue to evolve and be refined as we increase usage and find the boundaries of our current systems.</p>
+    <p>As our design system is increasingly adopted across in more parts of the product, we are continuing to develop and consolidate our documentation, and useage guidelines, with the goal of making this work as easily accessible as possible across the team. This work will continue to evolve and be refined as we increase usage and find the boundaries of our current systems.</p>
     <div class="img-wrapper">
       <img src="/work/palette/assets/palette banner.png" alt="Palette" />
     </div>
