--- a/work/city-guide/index.html
+++ b/work/city-guide/index.html
@@ -35,7 +35,7 @@
     <p>
       The Artsy City Guide was created to enable our user-base to easily discover and visit art in the physical world.
       The digital experience allows users to follow artists, galleries and museums for updates on new shows, and to
-      navigate to these shows in our 6 launch cities. The product was built as part of an on-going partnership with BMW
+      navigate these shows in our 6 launch cities. The product was built as part of an on-going partnership with BMW
       and was integrated into our existing iOS app.
     </p>
   </section>
@@ -57,14 +57,12 @@
 
   <section>
     <h2>Opportunity definition</h2>
-    <p>The Artsy iOS app has consistently been one of the primary drivers of commercial activity but was falling short of retention and engagement goals. Our previous collector research had shown
-      initial indications of the large roll that visiting shows and fairs play in collector behavior and the high
-      frequency with which this behavior happens.</p>
+    <p>The Artsy iOS app has consistently been one of the primary drivers of commercial activity but was falling short of retention and engagement goals. Previous collector research had indicated that while most collectors don't usually purchase works highly regular basis, they are consistently visiting galleries, museums and fairs.</p>
     <p>After completing an in-depth competitor analysis, we saw a large opportunity to create a product with a more
       seamless and comprehensive user-experience, leveraging both our existing commercial infrastructure and
       personalization layers, neither of which existed in competitive products.</p>
-    <p>These inputs led us to believe that creating a product focused on the discovery and exploration of shows and
-      fairs could increase our app engagement while simultaneously enhancing our collectors commercial experience.</p>
+    <p>These inputs led us to believe that creating a product focused on the exploration of shows and
+      fairs could increase our app engagement while simultaneously enhancing collectors commercial experience.</p>
     <div class="img-wrapper">
       <img src="/work/city-guide/assets/city guide competitors.png" alt="Artsy City Guide" />
     </div>
@@ -75,23 +73,23 @@
     <h2>Research</h2>
     <p>To further understand the specifics of we conducted a series of user interviews. Each conversation was focused on
       highlighting the relationship between a collectors commercial behavior and their show visiting habits. With each
-      subjects we discussed what factors influence their decisions to visit (or not visit) a show or fair, what key information they rely on, and what tools they use to assist throughout their process.</p>
+      subject we discussed what factors influenced their decisions to visit (or not visit) a show or fair, what key information they rely on, and what tools they use to assist throughout their process.</p>
     <div class="img-wrapper">
       <img src="/work/city-guide/assets/city guide interviews.png" alt="Artsy City Guide" />
     </div>
     <p>These conversations reinforced some of our initial assumptions around the importance of personalization and of
       robust information on the artists, galleries, and museums associated with shows. They also highlighted the
-      importance of social validation when considering a show or fair to visit, something that is being explored in
+      importance of social validation and reccomendations throughout the show discovery process, which will be explored in
       subsequent iterations of the app.</p>
   </section>
 
   <section>
     <h2>Exploration and iteration</h2>
-    <p>After developing an initial understanding of our opportunity with key stakeholders, we began working on a more developed approach to the information architecture and structure of the app through a series of wireframes. These explorations were continuously assessed by our internal teams and tweaked based on feedback.</p>
+    <p>After developing an initial understanding of our opportunity with key stakeholders, we began developing the information architecture and structure of the app through a series of wireframes. These explorations were continuously assessed by our internal teams and tweaked based on feedback.</p>
     <div class="img-wrapper">
       <img src="/work/city-guide/assets/city wireframes.png" alt="Artsy City Guide" />
     </div>
-    <p>Simultaneously we began to explore various aspects of the UI, iterating on various components. These explorations were then evaluated by internal teams and reconciled with existing UX patterns and visual language.</p>
+    <p>Simultaneously we began to explore a number of key screens, and iterate on various components. These explorations were then evaluated by internal teams and reconciled with our existing UX patterns and visual language.</p>
     <div class="img-wrapper">
       <img src="/work/city-guide/assets/city switcher explorations.png" alt="Artsy City Guide" />
     </div>
@@ -100,23 +98,23 @@
 
   <section>
     <h2>Design</h2>
-    <p>The core app experience is based around 6 initial  launch locations. When location services are enabled users are automatically placed within their current city if supported, with the ability to quickly switch to other locations via the dropdown menu. The feature set will quickly be expanded to support wider geographic areas.</p>
+    <p>The core app experience is based around 6 initial launch locations. When location services are enabled for users within these cities, they are automatically placed in their respective city view, with the ability to quickly switch to other locations via the dropdown menu. The feature set will quickly be expanded to support wider geographic areas as we scale.</p>
     <div class="img-wrapper">
       <img src="/work/city-guide/assets/city and switcher.png" alt="Artsy City Guide" />
     </div>
-    <p>The home view of each city offers a variety of entry points into the wide range of shows and events, broken down into time sensitive, personalized, and curated content buckets.</p>
+    <p>The home view of each city offers a variety of entry points into the wide range of shows and fairs, organized into time sensitive, personalized, and curated content buckets.</p>
     <div class="img-wrapper">
       <img src="/work/city-guide/assets/city guide home organization.png" alt="Artsy City Guide" />
     </div>
-    <p>The map view for each city allows users to quickly place themselves in relation to the events around them. Specific UI considerations were implemented to allow for easy browsing of multiple events in particularly dense areas.</p>
+    <p>The map view for each city allows users to quickly place themselves in relation to the events around them. Specific UI considerations were implemented to allow for easy browsing of multiple events in dense areas.</p>
     <div class="img-wrapper">
       <img src="/work/city-guide/assets/city guide map.png" alt="Artsy City Guide" />
     </div>
-    <p>New fair views allow users to browse and search by artists, exhibitors (galleries), or works. Additional information about the fair location and other programming is also easily accessible on the overview page.</p>
+    <p>New fair views allow users to browse and search by artists, exhibitors (galleries), or works. Additional information about the fair location and other programming is also available on the overview page.</p>
     <div class="img-wrapper">
       <img src="/work/city-guide/assets/city guide fair.png" alt="Artsy City Guide" />
     </div>
-    <p>The show view surfaces key information about the show and highlights any works that are part of the show whenever available. This view is integrated with our existing artist and artwork infrastructure.</p>
+    <p>The show view surfaces installation shots and works included in the show, along with additional information provided by the gallery. This view is integrated with our existing artist and artwork infrastructure.</p>
     <div class="img-wrapper">
       <img src="/work/city-guide/assets/city guide show.png" alt="Artsy City Guide" />
     </div>
@@ -124,7 +122,7 @@
 
   <section>
     <h2>Analysis</h2>
-    <p>While results are still preliminary, since the launch of the app we have surpassed our initial goals with regard to account creation and have seen our highest number of commercial interactions within the app to date. These metrics will continue to be monitored as the product useage increases.</p>
+    <p>Preliminary results since our launch of the app have surpassed initial goals for account creation and have resulted in the highest number of monthly commercial interactions within the app to date.</p>
   </section>
 
   <section>
