--- a/work/city-guide/index.html
+++ b/work/city-guide/index.html
@@ -57,7 +57,7 @@
 
   <section>
     <h2>Opportunity definition</h2>
-    <p>The Artsy iOS app has consistently been one of the primary drivers of commercial activity but was falling short of retention and engagement goals. Previous collector research had indicated that while most collectors don't usually purchase works highly regular basis, they are consistently visiting galleries, museums and fairs.</p>
+    <p>The Artsy iOS app has consistently been one of the primary drivers of commercial activity but was falling short of retention and engagement goals. Previous collector research had indicated that while most collectors don't usually purchase works on a highly regular basis, they are consistently visiting galleries, museums and fairs.</p>
     <p>After completing an in-depth competitor analysis, we saw a large opportunity to create a product with a more
       seamless and comprehensive user-experience, leveraging both our existing commercial infrastructure and
       personalization layers, neither of which existed in competitive products.</p>
@@ -71,13 +71,13 @@
 
   <section>
     <h2>Research</h2>
-    <p>To further understand the specifics of we conducted a series of user interviews. Each conversation was focused on
-      highlighting the relationship between a collectors commercial behavior and their show visiting habits. With each
-      subject we discussed what factors influenced their decisions to visit (or not visit) a show or fair, what key information they rely on, and what tools they use to assist throughout their process.</p>
+    <p>To further understand the specific collector needs we conducted a series of user interviews. Each conversation was focused on
+      highlighting the relationship between a collectors commercial behavior and their show-visiting habits. With each
+      subject we discussed what factors influenced their decisions to visit (or not visit) a show or fair, what key information they relied on, and what tools they used to assist throughout their process.</p>
     <div class="img-wrapper">
       <img src="/work/city-guide/assets/city guide interviews.png" alt="Artsy City Guide" />
     </div>
-    <p>These conversations reinforced some of our initial assumptions around the importance of personalization and of
+    <p>These conversations reinforced some of our initial assumptions around the importance of personalization and
       robust information on the artists, galleries, and museums associated with shows. They also highlighted the
       importance of social validation and reccomendations throughout the show discovery process, which will be explored in
       subsequent iterations of the app.</p>
