--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Owen Dodd</title>
-  <link rel="icon" type="image/png" href="assets/favicon.png" />
-  <link href="https://fonts.googleapis.com/css?family=Work+Sans:500" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="../assets/css/home.min.css">
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+  <link rel="icon" type="image/png" href="/assets/favicon.png" />
+  <link rel="stylesheet" type="text/css" href="../assets/css/home.min.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-86134698-1"></script>
   <script>
@@ -17,49 +16,113 @@
     function gtag() {
       dataLayer.push(arguments);
     }
-    gtag('js', new Date());
+    gtag("js", new Date());
 
-    gtag('config', 'UA-86134698-1');
+    gtag("config", "UA-86134698-1");
   </script>
-
 </head>
 
-<body class="home">
+<body>
+  <header>
+    <div>
+      <div class="name">
+        <h1>
+          Owen Dodd
+        </h1>
+      </div>
+      <div class="bio">
+        <h1>
+          Product design and art direction, based in New York City. Working in
+          and around art, technology, food and publishing.
+        </h1>
+      </div>
+    </div>
 
-    <header>
-        <div>
-          <div class="name">
-            <h1>
-              Owen Dodd
-            </h1>
-          </div>
-          <div class="bio">
-            <h1>
-              Product design and art direction, based in New York City. Working in and around art, technology, food and publishing.
-            </h1>
-          </div>
+    <div>
+        <h2 class="footer">
+            <span class="contact">Brooklyn, NY</span>
+            <a class="contact" href="mailto:mail@owendodd.com"
+              >mail@owendodd.com</a
+            >
+            <a class="contact" href="https://www.are.na/owen-dodd/" target="_blank">Are.na</a>
+            <a class="contact" href="http://www.instagram.com/owendodd" target="_blank">Instagram</a>
+            <a class="contact" href="https://www.linkedin.com/in/owen-dodd-402b8528/" target="_blank">Linkedin</a>
+          </h2>
+      </div>
+  </header>
+
+  <div class="menu">
+    <h2></h2>
+  </div>
+
+  <!-- Start projects -->
+
+  <!-- <section class="first">
+    <h2 class="section-title" id="case-studies">• Case studies</h2>
+    <div class="case-study-wrapper">
+      <a href="/work/city-guide/">
+        <div class="case-study">
+          <img src="/assets/imgs/city guide thumb.png" alt="" />
+          <h1>Artsy City Guide</h1>
+        </div>
+      </a>
+      <a href="/work/palette/">
+        <div class="case-study">
+
+          <img src="/assets/imgs/palette thumb.png" alt="" />
+          <h1>Palette Design System</h1>
 
         </div>
-  
-        <div>
-          <h2 class="footer">
-              <span class="contact">Brooklyn, NY</span>
-              <a class="contact" href="mailto:mail@owendodd.com"
-                >mail@owendodd.com</a
-              >
-              <a class="contact" href="https://www.are.na/owen-dodd/" target="_blank">Are.na</a>
-              <a class="contact" href="http://www.instagram.com/owendodd" target="_blank">Instagram</a>
-              
-            </h2>
-        </div>
-      </header>
+      </a>
+    </div>
+  </section> -->
 
 
+  <section class="grey first">
+    <h2 class="section-title" id="additional-work">• Selected work</h2>
+    <div class="img-wrapper">
+        <img src="/assets/imgs/city guide.png" alt="Analytics dashboard" />
+      </div>
+    <div class="img-wrapper">
+      <img src="/assets/imgs/analytics.png" alt="Analytics dashboard" />
+    </div>
+    <div class="img-wrapper">
+      <img src="/assets/imgs/collections.png" alt="Analytics dashboard" />
+    </div>
+    <div class="img-wrapper">
+        <img src="/assets/imgs/inputs.png" alt="Analytics dashboard" />
+      </div>
+    <div class="img-wrapper">
+      <img src="/assets/imgs/article tooltips.png" alt="Analytics dashboard" />
+    </div>
+    <div class="img-wrapper">
+      <img src="/assets/imgs/feature articles.png" alt="Editorial feature articles" />
+    </div>
+    <div class="img-wrapper">
+      <img src="/assets/imgs/video articles.png" alt="Video player" />
+    </div>
+    <div class="img-wrapper">
+      <img src="/assets/imgs/standard articles.png" alt="Standard editorial articles" />
+    </div>
+    <h2 class="caption">Standard editorial articles</h2>
+    <div class="img-wrapper">
+      <img src="/assets/imgs/news feed.png" alt="News feed" />
+    </div>
+    <div class="img-wrapper">
+      <img src="/assets/imgs/brand partnerships.png" alt="Brand partnerships" />
+    </div>
+  </section>
 
+  <section>
+    <h2>
+      <span class="date-right">Case-studies available upon request</span><a class="contact date-right"
+        href="/assets/imgs/od_resume_2019.pdf">Resume</a>
+      <a class="contact date-right" href="mailto:mail@owendodd.com">mail@owendodd.com</a>
+    </h2>
+    <h2></h2>
+  </section>
 
-
-
+  <script type="text/javascript" src="/assets/js/script.js"></script>
 </body>
-
 
 </html>
