--- a/work/city-guide/index.html
+++ b/work/city-guide/index.html
@@ -25,7 +25,7 @@
 <body>
   <section>
     <h2>
-      <a href="/work">Owen Dodd</a>
+        <a href="/">Back to home</a>
     </h2>
     <h1>Artsy City Guide</h1>
     <div class="img-wrapper header">
@@ -128,7 +128,7 @@
   <section>
     <h2>
       <a class="contact date-right" href="/work/">Back to home</a><a class="contact date-right"
-        href="/work/assets/od_resume_2019.pdf">Download resume</a>
+        href="/work/assets/od_resume_2019.pdf">Resume</a>
       <a class="contact date-right" href="mailto:mail@owendodd.com">mail@owendodd.com</a>
     </h2>
     <h2></h2>
