--- a/work/palette/index.html
+++ b/work/palette/index.html
@@ -25,7 +25,7 @@
 <body>
   <section>
     <h2>
-      <a href="/work">Owen Dodd</a>
+      <a href="/">Back to home</a>
     </h2>
     <h1>Palette Design System</h1>
     <div class="img-wrapper header">
@@ -41,7 +41,7 @@
       Over the past 3 years, the Artsy design team has taken various attempts at developing a cohesive design system to
       enable quicker and more consistent iteration across our products. Without a structured approach, these initiatives
       have been limited in scope to specific product areas and have
-      failed to gain traction within the organization.
+      failed to gain traction across the organization.
     </p>
     <p> Working without dedicated design systems resources, we knew we must focus on creating a system that could be
       developed in a distributed manner and whose work could be
@@ -136,7 +136,7 @@
   <section>
     <h2>
       <a class="contact date-right" href="/work/">Back to home</a><a class="contact date-right"
-        href="/work/assets/od_resume_2019.pdf">Download resume</a>
+        href="/work/assets/od_resume_2019.pdf">Resume</a>
       <a class="contact date-right" href="mailto:mail@owendodd.com">mail@owendodd.com</a>
     </h2>
     <h2></h2>
