--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <div>
         <h2 class="footer">
-            <span class="contact">Brooklyn, NY</span>
+            <span class="contact">New York, NY</span>
             <a class="contact" href="mailto:mail@owendodd.com"
               >mail@owendodd.com</a
             >
@@ -78,7 +78,7 @@
   </section> -->
 
 
-  <section class="grey first">
+  <section class="first">
     <h2 class="section-title" id="additional-work">• Selected work</h2>
     <div class="img-wrapper">
         <img src="/assets/imgs/city guide.png" alt="Analytics dashboard" />
@@ -104,7 +104,6 @@
     <div class="img-wrapper">
       <img src="/assets/imgs/standard articles.png" alt="Standard editorial articles" />
     </div>
-    <h2 class="caption">Standard editorial articles</h2>
     <div class="img-wrapper">
       <img src="/assets/imgs/news feed.png" alt="News feed" />
     </div>
