--- a/work/palette/index.html
+++ b/work/palette/index.html
@@ -114,7 +114,7 @@
     <h2>Components: modals</h2>
     <p>Modals are used across our platform for quick actions and to surface important contextual information. The new modal component in Palette was created with two size variations, and with a number of standardized treatment options for CTAs, forms, titles and other commonly used UI.</p>
     <div class="img-wrapper">
-      <img src="/work/palette/assets/palette heirarchy.png" alt="Palette" />
+      <img src="/work/palette/assets/palette modal.png" alt="Palette" />
     </div>
   </section>
   <section>
