update w/ NYT info

--- a/index.html
+++ b/index.html
@@ -81,19 +81,25 @@
   <section class="first">
     <h2 class="section-title" id="additional-work">• Selected work</h2>
     <div class="img-wrapper">
-        <img src="/assets/imgs/city guide.png" alt="Analytics dashboard" />
-      </div>
+      <img src="/assets/imgs/ink home.png" alt="Ink homepage" />
+    </div>
+    <div class="img-wrapper">
+      <img src="/assets/imgs/push.png" alt="NYT Push Interface" />
+    </div>
+    <div class="img-wrapper">
+      <img src="/assets/imgs/city guide.png" alt="Artsy City Guide" />
+    </div>
     <div class="img-wrapper">
       <img src="/assets/imgs/analytics.png" alt="Analytics dashboard" />
     </div>
     <div class="img-wrapper">
-      <img src="/assets/imgs/collections.png" alt="Analytics dashboard" />
+      <img src="/assets/imgs/collections.png" alt="Artsy collections" />
     </div>
     <div class="img-wrapper">
-        <img src="/assets/imgs/inputs.png" alt="Analytics dashboard" />
+        <img src="/assets/imgs/inputs.png" alt="Palette inputs" />
       </div>
     <div class="img-wrapper">
-      <img src="/assets/imgs/article tooltips.png" alt="Analytics dashboard" />
+      <img src="/assets/imgs/article tooltips.png" alt="Article tooltips" />
     </div>
     <div class="img-wrapper">
       <img src="/assets/imgs/feature articles.png" alt="Editorial feature articles" />
