update resume links

--- a/work/palette/index.html
+++ b/work/palette/index.html
@@ -135,8 +135,9 @@
 
   <section>
     <h2>
-      <a class="contact date-right" href="/work/">Back to home</a><a class="contact date-right"
-        href="/work/assets/od_resume_2019.pdf">Resume</a>
+      <a class="contact date-right" href="/work/">Back to home</a>
+      <!-- <a class="contact date-right"
+        href="/work/assets/od_resume_2019.pdf">Resume</a> -->
       <a class="contact date-right" href="mailto:mail@owendodd.com">mail@owendodd.com</a>
     </h2>
     <h2></h2>
