initial type changes

--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
     <div>
       <div class="name">
         <h1>
-          Owen Dodd
+          <span class="name">Owen Dodd</span>
+          <span class="location">New York & Copenhagen</span>
         </h1>
       </div>
       <div class="bio">
         <h1>
-          Product design and art direction, based in New York City. Working in
-          and around art, technology, food and publishing.
+          Product design and art direction, working in
+  and around art, technology, food and publishing.
         </h1>
       </div>
     </div>
@@ -54,28 +55,6 @@
   <div class="menu">
     <h2></h2>
   </div>
-
-  <!-- Start projects -->
-
-  <!-- <section class="first">
-    <h2 class="section-title" id="case-studies">• Case studies</h2>
-    <div class="case-study-wrapper">
-      <a href="/work/city-guide/">
-        <div class="case-study">
-          <img src="/assets/imgs/city guide thumb.png" alt="" />
-          <h1>Artsy City Guide</h1>
-        </div>
-      </a>
-      <a href="/work/palette/">
-        <div class="case-study">
-
-          <img src="/assets/imgs/palette thumb.png" alt="" />
-          <h1>Palette Design System</h1>
-
-        </div>
-      </a>
-    </div>
-  </section> -->
 
 
   <section class="first">
