--- a/index.html
+++ b/index.html
@@ -1,112 +1,137 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <title>Owen Dodd</title>
+    <link rel="icon" type="image/png" href="/assets/favicon.png" />
+    <link rel="stylesheet" type="text/css" href="../assets/css/home.min.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-86134698-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>Owen Dodd</title>
-  <link rel="icon" type="image/png" href="/assets/favicon.png" />
-  <link rel="stylesheet" type="text/css" href="../assets/css/home.min.css" />
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-86134698-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag("js", new Date());
+      gtag("config", "UA-86134698-1");
+    </script>
+  </head>
 
-    gtag("config", "UA-86134698-1");
-  </script>
-</head>
-
-<body>
-  <header>
-    <div>
-      <div class="name">
-        <h1>
-          <span class="name">Owen Dodd</span>
-          <span class="location">New York & Copenhagen</span>
-        </h1>
-      </div>
-      <div class="bio">
-        <h1>
-          Product design and art direction, working in
-  and around art, technology, food and publishing.
-        </h1>
-      </div>
-    </div>
-
-    <div>
-        <h2 class="footer">
-            <span class="contact">New York, NY</span>
+  <body>
+    <header>
+      <div class="bg"></div>
+      <div class="grid-4">
+        <div><p>Owen Dodd</p></div>
+        <div><p>New York & Copenhagen</p></div>
+        <div class="span-2">
+          <h2 class="footer">
             <a class="contact" href="mailto:mail@owendodd.com"
               >mail@owendodd.com</a
             >
-            <a class="contact" href="https://www.are.na/owen-dodd/" target="_blank">Are.na</a>
-            <a class="contact" href="http://www.instagram.com/owendodd" target="_blank">Instagram</a>
-            <a class="contact" href="https://www.linkedin.com/in/owen-dodd-402b8528/" target="_blank">Linkedin</a>
+            <a
+              class="contact"
+              href="https://www.are.na/owen-dodd/"
+              target="_blank"
+              >Are.na</a
+            >
+            <a
+              class="contact"
+              href="http://www.instagram.com/owendodd"
+              target="_blank"
+              >Instagram</a
+            >
+            <a
+              class="contact"
+              href="https://www.linkedin.com/in/owen-dodd-402b8528/"
+              target="_blank"
+              >Linkedin</a
+            >
           </h2>
+        </div>
+       
       </div>
-  </header>
 
-  <div class="menu">
-    <h2></h2>
-  </div>
+      <div>
+        
+      </div>
+    </header>
 
+    <div class="menu">
+      <h2></h2>
+    </div>
 
-  <section class="first">
-    <h2 class="section-title" id="additional-work">• Selected work</h2>
-    <div class="img-wrapper">
-      <img src="/assets/imgs/ink home.png" alt="Ink homepage" />
-    </div>
-    <div class="img-wrapper">
-      <img src="/assets/imgs/push.png" alt="NYT Push Interface" />
-    </div>
-    <div class="img-wrapper">
-      <img src="/assets/imgs/city guide.png" alt="Artsy City Guide" />
-    </div>
-    <div class="img-wrapper">
-      <img src="/assets/imgs/analytics.png" alt="Analytics dashboard" />
-    </div>
-    <div class="img-wrapper">
-      <img src="/assets/imgs/collections.png" alt="Artsy collections" />
-    </div>
-    <div class="img-wrapper">
+    <section class="first">
+      <h2 class="section-title" id="additional-work">• Selected work</h2>
+      <div class="img-wrapper">
+        <img src="/assets/imgs/ink home.png" alt="Ink homepage" />
+      </div>
+      <div class="img-wrapper">
+        <img src="/assets/imgs/push.png" alt="NYT Push Interface" />
+      </div>
+      <div class="img-wrapper">
+        <img src="/assets/imgs/city guide.png" alt="Artsy City Guide" />
+      </div>
+      <div class="img-wrapper">
+        <img src="/assets/imgs/analytics.png" alt="Analytics dashboard" />
+      </div>
+      <div class="img-wrapper">
+        <img src="/assets/imgs/collections.png" alt="Artsy collections" />
+      </div>
+      <div class="img-wrapper">
         <img src="/assets/imgs/inputs.png" alt="Palette inputs" />
       </div>
-    <div class="img-wrapper">
-      <img src="/assets/imgs/article tooltips.png" alt="Article tooltips" />
-    </div>
-    <div class="img-wrapper">
-      <img src="/assets/imgs/feature articles.png" alt="Editorial feature articles" />
-    </div>
-    <div class="img-wrapper">
-      <img src="/assets/imgs/video articles.png" alt="Video player" />
-    </div>
-    <div class="img-wrapper">
-      <img src="/assets/imgs/standard articles.png" alt="Standard editorial articles" />
-    </div>
-    <div class="img-wrapper">
-      <img src="/assets/imgs/news feed.png" alt="News feed" />
-    </div>
-    <div class="img-wrapper">
-      <img src="/assets/imgs/brand partnerships.png" alt="Brand partnerships" />
-    </div>
-  </section>
+      <div class="img-wrapper">
+        <img src="/assets/imgs/article tooltips.png" alt="Article tooltips" />
+      </div>
+      <div class="img-wrapper">
+        <img
+          src="/assets/imgs/feature articles.png"
+          alt="Editorial feature articles"
+        />
+      </div>
+      <div class="img-wrapper">
+        <img src="/assets/imgs/video articles.png" alt="Video player" />
+      </div>
+      <div class="img-wrapper">
+        <img
+          src="/assets/imgs/standard articles.png"
+          alt="Standard editorial articles"
+        />
+      </div>
+      <div class="img-wrapper">
+        <img src="/assets/imgs/news feed.png" alt="News feed" />
+      </div>
+      <div class="img-wrapper">
+        <img
+          src="/assets/imgs/brand partnerships.png"
+          alt="Brand partnerships"
+        />
+      </div>
+    </section>
 
-  <section>
-    <h2>
-      <span class="date-right">Case-studies available upon request</span><a class="contact date-right"
-        href="/assets/imgs/od_resume_2019.pdf">Resume</a>
-      <a class="contact date-right" href="mailto:mail@owendodd.com">mail@owendodd.com</a>
-    </h2>
-    <h2></h2>
-  </section>
+    <section>
+      <h2>
+        <span class="date-right">Case-studies available upon request</span
+        ><a class="contact date-right" href="/assets/imgs/od_resume_2019.pdf"
+          >Resume</a
+        >
+        <a class="contact date-right" href="mailto:mail@owendodd.com"
+          >mail@owendodd.com</a
+        >
+      </h2>
+      <h2></h2>
+    </section>
 
-  <script type="text/javascript" src="/assets/js/script.js"></script>
-</body>
-
+    <script type="text/javascript" src="/assets/js/script.js"></script>
+  </body>
 </html>
