--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <header>
       <div class="bg"></div>
       <div class="grid-4">
-        <div><p>Owen Dodd</p></div>
-        <div><p>New York & Copenhagen</p></div>
+        <div><p>Owen Dodd, New York & Copenhagen</p></div>
+        <div><p></p></div>
         <div class="span-2">
           <h2 class="footer">
             <a class="contact" href="mailto:mail@owendodd.com"
