some updates to body

--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
       <div class="bg"></div>
       <div class="grid-4">
         <div class="span-2">
-          <p>Owen Dodd <span class="location">New York, Copenhagen</p></p>
+          <h1>Owen Dodd <span class="location">New York, Copenhagen</span></h1>
           
         </div>
         <div class="span-2">
+          <h1>
             <a class="contact" href="mailto:mail@owendodd.com"
               >mail@owendodd.com</a
             >
@@ -56,15 +57,14 @@
               href="https://www.linkedin.com/in/owen-dodd-402b8528/"
               target="_blank"
               >Linkedin</a
-            >
+            ></h1>
         </div>
       </div>
     </header>
 
     <section class="intro">
-      <a href="">
-        <p>Senior Product Designer at NYT Cooking</p>
-      </a>
+      <p>I'm a product designer and photographer working on projects focused around art, technology, food and publishing. Currently I'm working as a Senior Product Designer for <a href="https://cooking.nytimes.com/">NYT Cooking</a> and based in Copenhagen.</p>
+      <p>Boyfriend of Kasia</p>
     </section>
 
     <section>
