--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
       <div class="bg"></div>
       <div class="grid-4">
         <div class="span-2">
-          <h1>Owen Dodd <span class="location">New York, Copenhagen</span></h1>
-          
+          <h1>Owen Dodd</h1>
+          <h2>New York, Copenhagen</h2>
         </div>
         <div class="span-2">
-          <h1>
+          <h2>
             <a class="contact" href="mailto:mail@owendodd.com"
               >mail@owendodd.com</a
             >
@@ -57,7 +57,7 @@
               href="https://www.linkedin.com/in/owen-dodd-402b8528/"
               target="_blank"
               >Linkedin</a
-            ></h1>
+            ></h2>
         </div>
       </div>
     </header>
