--- a/index.html
+++ b/index.html
@@ -63,12 +63,13 @@
     </header>
 
     <section class="intro">
+      <h3>Information</h3>
       <p>I'm a product designer and photographer working on projects focused around art, technology, food and publishing. Currently I'm working as a Senior Product Designer for <a href="https://cooking.nytimes.com/">NYT Cooking</a> and based in Copenhagen.</p>
       <p>Boyfriend of Kasia</p>
     </section>
 
     <section>
-      <p class="section-title" id="additional-work">• Selected work</p>
+      <h3 class="section-title" id="additional-work">Selected work</h3>
       <div class="img-wrapper">
         <img src="/assets/imgs/ink home.png" alt="Ink homepage" />
       </div>
