--- a/index.html
+++ b/index.html
@@ -37,97 +37,85 @@
         </div>
         <div class="span-2">
           <h2>
-            <a class="contact" href="mailto:mail@owendodd.com"
+            <a class="link" href="mailto:mail@owendodd.com"
               >mail@owendodd.com</a
             >
             <a
-              class="contact"
+              class="link"
               href="https://www.are.na/owen-dodd/"
               target="_blank"
               >Are.na</a
             >
             <a
-              class="contact"
+              class="link"
               href="http://www.instagram.com/owendodd"
               target="_blank"
               >Instagram</a
             >
             <a
-              class="contact"
+              class="link"
               href="https://www.linkedin.com/in/owen-dodd-402b8528/"
               target="_blank"
               >Linkedin</a
-            ></h2>
+            >
+          </h2>
         </div>
       </div>
     </header>
 
     <section class="intro">
+      <div class="bg"></div>
       <h3>Information</h3>
-      <p>I'm a product designer and photographer working on projects focused around art, technology, food and publishing. Currently I'm working as a Senior Product Designer for <a href="https://cooking.nytimes.com/">NYT Cooking</a> and based in Copenhagen.</p>
-      <p>Boyfriend of Kasia</p>
-    </section>
-
-    <section>
-      <h3 class="section-title" id="additional-work">Selected work</h3>
-      <div class="img-wrapper">
-        <img src="/assets/imgs/ink home.png" alt="Ink homepage" />
-      </div>
-      <div class="img-wrapper">
-        <img src="/assets/imgs/push.png" alt="NYT Push Interface" />
-      </div>
-      <div class="img-wrapper">
-        <img src="/assets/imgs/city guide.png" alt="Artsy City Guide" />
-      </div>
-      <div class="img-wrapper">
-        <img src="/assets/imgs/analytics.png" alt="Analytics dashboard" />
-      </div>
-      <div class="img-wrapper">
-        <img src="/assets/imgs/collections.png" alt="Artsy collections" />
-      </div>
-      <div class="img-wrapper">
-        <img src="/assets/imgs/inputs.png" alt="Palette inputs" />
-      </div>
-      <div class="img-wrapper">
-        <img src="/assets/imgs/article tooltips.png" alt="Article tooltips" />
-      </div>
-      <div class="img-wrapper">
-        <img
-          src="/assets/imgs/feature articles.png"
-          alt="Editorial feature articles"
-        />
-      </div>
-      <div class="img-wrapper">
-        <img src="/assets/imgs/video articles.png" alt="Video player" />
-      </div>
-      <div class="img-wrapper">
-        <img
-          src="/assets/imgs/standard articles.png"
-          alt="Standard editorial articles"
-        />
-      </div>
-      <div class="img-wrapper">
-        <img src="/assets/imgs/news feed.png" alt="News feed" />
-      </div>
-      <div class="img-wrapper">
-        <img
-          src="/assets/imgs/brand partnerships.png"
-          alt="Brand partnerships"
-        />
-      </div>
-    </section>
-
-    <section>
       <p>
-        <span class="date-right">Case-studies available upon request</span
-        ><a class="contact date-right" href="/assets/imgs/od_resume_2019.pdf"
-          >Resume</a
-        >
-        <a class="contact date-right" href="mailto:mail@owendodd.com"
-          >mail@owendodd.com</a
-        >
+        I'm a product designer and photographer working on projects focused
+        around art, technology, food and publishing. Currently I'm working as a
+        Senior Product Designer for
+        <a href="https://cooking.nytimes.com/">NYT Cooking</a> and based in
+        Copenhagen.
       </p>
-      <p></p>
+    </section>
+
+    <section>
+      <div class="bg"></div>
+      <p>
+        Previously I've spent time developing design systems within
+        <a href="https://www.nytimes.com/">The New York Times</a>, designing the
+        editorial experience at <a href="https://www.artsy.net/">Artsy</a>, and
+        have done digital and print based projects at a number of design studios
+        including <a href="https://bergerfohr.com/">Berger & Föhr</a> and
+        <a href="https://zutalorsinc.com/#home">Zut Alors!</a>.
+      </p>
+    </section>
+
+    <section>
+      <div class="bg"></div>
+      <p>
+        Additionally, I've founded a food and wine project called
+        <a href="https://jzujfood.com/">Jzuj Food</a>, which ran from 2018–2020
+        as series of collaborative dinner events, and have published
+        ecologically focused art books as a part of
+        <a href="http://solar-power.press/">Solar Power Press</a>.
+      </p>
+    </section>
+
+    <section class="intro">
+      <div class="bg"></div>
+      <h3>Information</h3>
+      <p>
+        I'm a product designer and photographer working on projects focused
+        around art, technology, food and publishing. Currently I'm working as a
+        Senior Product Designer for
+        <a href="https://cooking.nytimes.com/">NYT Cooking</a> and based in
+        Copenhagen.
+      </p>
+    </section>
+
+    <section>
+      <h2>
+        <span class="date-right">Case-studies available upon request</span>
+        <a class="link" href="/assets/imgs/od_resume_2019.pdf">Resume</a>
+        <a class="link" href="mailto:mail@owendodd.com">mail@owendodd.com</a>
+      </h2>
     </section>
 
     <script type="text/javascript" src="/assets/js/script.js"></script>
