--- a/index.html
+++ b/index.html
@@ -28,44 +28,20 @@
   </head>
 
   <body>
-    <header>
-      <div class="bg"></div>
-      <div class="grid-4">
-        <div class="span-2">
-          <h1>Owen Dodd</h1>
-          <h2>New York, Copenhagen</h2>
+      <header>
+        <div class="grid-4">
+          <div class="span-2">
+            <div class="bg"></div>
+            <h1>Office of Owen Dodd</h1>
+            <h3>Colorado – New York – Copenhagen</h3>
+            <h1 class="contact first">(US) +1 303 819 0844</h1>
+            <h1 class="contact">(EU) +45 31 48 91 93</h1>
+            <h1 class="contact"><a href="mailto:mail@owendodd.com">mail@owendodd.com</a></h1>
+          </div>
         </div>
-        <div class="span-2">
-          <h2>
-            <a class="link" href="mailto:mail@owendodd.com"
-              >mail@owendodd.com</a
-            >
-            <a
-              class="link"
-              href="https://www.are.na/owen-dodd/"
-              target="_blank"
-              >Are.na</a
-            >
-            <a
-              class="link"
-              href="http://www.instagram.com/owendodd"
-              target="_blank"
-              >Instagram</a
-            >
-            <a
-              class="link"
-              href="https://www.linkedin.com/in/owen-dodd-402b8528/"
-              target="_blank"
-              >Linkedin</a
-            >
-          </h2>
-        </div>
-      </div>
-    </header>
+      </header>
 
     <section class="intro">
-      <div class="bg"></div>
-      <h3>Information</h3>
       <p>
         I'm a product designer and photographer working on projects focused
         around art, technology, food and publishing. Currently I'm working as a
@@ -76,7 +52,6 @@
     </section>
 
     <section>
-      <div class="bg"></div>
       <p>
         Previously I've spent time developing design systems within
         <a href="https://www.nytimes.com/">The New York Times</a>, designing the
@@ -88,25 +63,12 @@
     </section>
 
     <section>
-      <div class="bg"></div>
       <p>
         Additionally, I've founded a food and wine project called
         <a href="https://jzujfood.com/">Jzuj Food</a>, which ran from 2018–2020
         as series of collaborative dinner events, and have published
         ecologically focused art books as a part of
         <a href="http://solar-power.press/">Solar Power Press</a>.
-      </p>
-    </section>
-
-    <section class="intro">
-      <div class="bg"></div>
-      <h3>Information</h3>
-      <p>
-        I'm a product designer and photographer working on projects focused
-        around art, technology, food and publishing. Currently I'm working as a
-        Senior Product Designer for
-        <a href="https://cooking.nytimes.com/">NYT Cooking</a> and based in
-        Copenhagen.
       </p>
     </section>
 
